refs task [FE] Create Agency page

--- a/assets/style/foptimal.css
+++ b/assets/style/foptimal.css
@@ -66,7 +66,7 @@
                                                         background: linear-gradient( to bottom, rgba(49, 49, 49, 0.8), rgba(49, 49, 49, 0.8), rgba(49, 49, 49, 0.8), #1C1C1C) !important;
                                                         border: none;
                                                         object-fit: cover;
-                                                        z-index: -2;
+                                                        /* z-index: -2; */
                                                     }
                                                     
                                                     .view {
