--- a/assets/style/foptimal.css
+++ b/assets/style/foptimal.css
@@ -63,10 +63,10 @@
                                                         background-repeat: no-repeat;
                                                         background-size: cover;
                                                         background-position: center center;
-                                                        background: linear-gradient( to bottom, rgba(49, 49, 49, 0.8), rgba(49, 49, 49, 0.8), rgba(49, 49, 49, 0.8), #1C1C1C) !important;
+                                                        /* background: linear-gradient( to bottom, rgba(49, 49, 49, 0.8), rgba(49, 49, 49, 0.8), rgba(49, 49, 49, 0.8), #1C1C1C) !important; */
                                                         border: none;
                                                         object-fit: cover;
-                                                        /* z-index: -2; */
+                                                        z-index: -2;
                                                     }
                                                     
                                                     .view {
@@ -86,6 +86,20 @@
                                                         height: 752px !important;
                                                         background: linear-gradient( to bottom, rgba(49, 49, 49, 0.3), rgba(49, 49, 49, 0.3), rgba(49, 49, 49, 0.3), #1C1C1C) !important;
                                                         z-index: -1;
+                                                    }
+                                                    
+                                                    .mix__color__image {
+                                                        position: absolute;
+                                                        width: 100% !important;
+                                                        height: 752px !important;
+                                                        object-fit: cover;
+                                                        z-index: -2;
+                                                    }
+                                                    
+                                                    .mix__color__image img {
+                                                        width: 100% !important;
+                                                        object-fit: cover;
+                                                        height: 752px !important;
                                                     }
                                                     
                                                     .navbar {
