refs task [FE] Create Agency page

--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -598,6 +598,9 @@ h6 {
     #swiper-wrapper4 {
         margin-left: -515px !important;
     }
+    #pagination1 {
+        margin-left: 20px !important;
+    }
     /* =============SECTION5============= */
     .container__section5__title {
         width: 100%;
