--- a/assets/style/foptimal.css
+++ b/assets/style/foptimal.css
@@ -34,7 +34,7 @@
                                                     
                                                     footer {
                                                         width: 100% !important;
-                                                        margin-top: 28px;
+                                                        margin-top: 30px;
                                                         align-items: center !important;
                                                     }
                                                     
@@ -77,6 +77,7 @@
                                                         width: 100% !important;
                                                         height: 96px !important;
                                                         z-index: 1000;
+                                                        transition: 0.3s !important;
                                                     }
                                                     
                                                     .mix__color {
@@ -867,7 +868,6 @@
                                                     .swiper-slide__image1 img {
                                                         width: 431px!important;
                                                         box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
-                                                        border-radius: 5px;
                                                         object-fit: cover;
                                                     }
                                                     
@@ -936,6 +936,7 @@
                                                     .swiper-slide-title h3 {
                                                         width: 356px !important;
                                                         height: 72px !important;
+                                                        padding-top: 20px!important;
                                                         font-family: 'Poppins', sans-serif;
                                                         font-style: normal;
                                                         font-weight: normal;
@@ -1008,12 +1009,19 @@
                                                     }
                                                     
                                                     .swiper-pagination-bullet-active {
-                                                        width: 20px !important;
-                                                        height: 20px !important;
-                                                        margin-left: -20px !important;
+                                                        width: 24px !important;
+                                                        height: 24px !important;
+                                                        margin-top: 2px !important;
                                                         border: 2px solid #FFFFFF !important;
                                                         box-sizing: border-box !important;
                                                         background: none !important;
+                                                    }
+                                                    
+                                                    #pagination1 {
+                                                        width: 160px !important;
+                                                        height: 24px !important;
+                                                        margin-top: 10px !important;
+                                                        margin-left: 6px !important;
                                                     }
                                                     /* ================SECTION5========================= */
                                                     
@@ -1069,7 +1077,7 @@
                                                     }
                                                     
                                                     #pagination2 {
-                                                        width: 190px !important;
+                                                        width: 160px !important;
                                                         height: 24px !important;
                                                         margin-top: 10px !important;
                                                         margin-left: 6px !important;
@@ -1192,6 +1200,7 @@
                                                     .swiper-slide__library2 {
                                                         width: 221px;
                                                         height: 42px;
+                                                        margin-top: 14px !important;
                                                         font-family: 'Poppins', sans-serif;
                                                         font-style: normal;
                                                         font-weight: 600;
@@ -1220,6 +1229,7 @@
                                                     
                                                     .container__footer__line {
                                                         width: 1240px !important;
+                                                        margin-top: 30px !important;
                                                         height: 0px;
                                                         margin: auto;
                                                         padding: auto;
@@ -1234,10 +1244,9 @@
                                                         width: 1240px !important;
                                                         height: 112px;
                                                         display: flex;
-                                                        /* padding-top: 30px; */
-                                                        /* margin-top: 30px; */
                                                         margin-left: -15px !important;
                                                         align-items: center;
+                                                        margin-top: -2px !important;
                                                     }
                                                     
                                                     .foptimal {
@@ -1410,4 +1419,21 @@
                                                     
                                                     .jurnalt__footer a {
                                                         margin-top: 50px !important;
+                                                    }
+                                                    
+                                                    .sidenav {
+                                                        height: 100%;
+                                                        width: 0;
+                                                        position: fixed;
+                                                        z-index: 1;
+                                                        top: 0;
+                                                        right: 0;
+                                                        background-color: #111;
+                                                        overflow-x: hidden;
+                                                        transition: 0.5s;
+                                                        padding-top: 60px;
+                                                    }
+                                                    
+                                                    .sidenav.active {
+                                                        width: 250px;
                                                     }
