--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -672,9 +672,12 @@ h6 {
         margin: 0;
         padding: 0;
     }
+    .navbar-nav {
+        background-color: #8B8682;
+        height: auto !important;
+    }
     .collapse {
         margin-left: 100px !important;
-        margin-top: -100px !important;
     }
     .nav-item {
         margin-top: 10px !important;
