--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -119,39 +119,43 @@ h6 {
         align-items: center;
     }
     .about__flex {
-        margin-left: 40px !important;
+        margin-left: 15px !important;
+        margin-right: 15px;
     }
     .text-right__1 {
-        width: 65%;
-        height: auto !;
+        width: 50%;
+        height: auto;
         margin-right: 0!important;
         display: flex;
-        justify-content: center;
+        margin-top: -10px !important;
     }
     .text-right__1 p {
         font-size: 30px !important;
         margin-left: 0!important;
+        line-height: 40px;
         flex-wrap: wrap;
-        justify-content: center;
+        margin-top: 20px !important;
     }
     #text__right2 {
-        width: 60%;
+        width: 50%;
         height: auto !important;
         display: flex;
-        justify-content: center;
+        font-size: 20px !important;
+        margin-top: -20px !important;
+        line-height: 40px !important;
+    }
+    .text-right__2 p {
+        width: 58% !important;
         font-size: 20px !important;
         margin-top: 10px !important;
     }
-    .text-right__2 p {
-        width: 60% !important;
-        font-size: 20px !important;
-    }
     .right__front__image {
-        width: 50% !important;
+        width: 48% !important;
+        margin-top: 15px !important;
         margin: auto;
     }
     .right__behind__image {
-        width: 50% !important;
+        width: 47% !important;
         margin-top: 10px;
     }
     /* ======== */
@@ -173,34 +177,38 @@ h6 {
         margin-top: 470px !important;
     }
     .text__left__image1 {
-        width: 90% !important;
+        width: 87% !important;
+        margin-left: 21px!important;
         margin: auto;
     }
     .text__left__image2 {
-        width: 97% !important;
+        width: 93% !important;
         margin: auto;
     }
     .our__flex {
         margin-right: 5px !important;
+        margin-top: -30px !important;
     }
     .text-left__1 h2 {
         width: 50%!important;
         height: auto !important;
         font-size: 25px !important;
-        margin-left: 50px;
+        line-height: 40px !important;
+        margin-left: 60px;
+        margin-top: -10px !important;
     }
     .text-left__2 {
         width: 50%;
         height: auto !important;
         flex-wrap: wrap;
-        justify-content: center;
+        margin-top: -25px !important;
     }
     .text-left__2 h3 {
-        width: 60%;
+        width: 50%;
         height: auto !important;
+        margin-left: 60px;
         flex-wrap: wrap;
-        justify-content: center;
-        font-size: 18px;
+        font-size: 20px;
     }
     /* ====================SECTION3=============*/
     #container__section3 {
@@ -210,11 +218,12 @@ h6 {
     .container__section3__title {
         max-width: 100%;
         flex-wrap: wrap;
+        margin-top: 5px !important;
         height: auto !important;
         font-size: 20px!important;
+        margin-top: -60px !important;
     }
     .container__section3__title p {
-        margin-top: 0 !important;
         margin-left: 0px !important;
         font-size: 30px!important;
         margin: auto;
@@ -224,6 +233,7 @@ h6 {
     }
     #section3__row {
         max-width: 50%;
+        margin-top: 10px !important;
         height: auto;
         display: block;
     }
@@ -252,12 +262,17 @@ h6 {
     .read__more {
         font-size: 15px !important;
     }
+    #section3_column1_row3,
+    #section3_column3_row3,
+    #section3_column2_row3 {
+        margin-top: 10px !important;
+    }
     /* ==========================SECTION4=============== */
     .count__number1 {
         max-width: 48px !important;
         height: 36px !important;
         margin-top: -200px !important;
-        margin-left: 250px !important;
+        margin-left: 300px !important;
         font-family: 'Poppins', sans-serif;
         font-family: 'Poppins', sans-serif;
         font-style: normal;
@@ -281,6 +296,22 @@ h6 {
         width: 100% !important;
         margin-top: -65px !important;
     }
+    .swiper-slide__icon__design1 {
+        margin-left: 45px;
+        margin-right: 15px;
+    }
+    .swiper-slide__library1 {
+        margin-left: 40px;
+        margin-right: 15px;
+    }
+    .swiper__slide__image {
+        width: 300 !important
+    }
+    .swiper-container-horizontal>.swiper-pagination-bullets,
+    .swiper-pagination-custom,
+    .swiper-pagination-fraction {
+        bottom: 15px !important;
+    }
     /* ======================SECTION5================ */
     #container__section5 {
         margin-top: -50px !important;
@@ -293,11 +324,16 @@ h6 {
     #swiper1__slide1__section5 {
         margin-top: -50px !important;
     }
+    .swiper-slide__image1 img {
+        width: 335px !important;
+        margin-left: 20px !important;
+        margin-right: 15px !important;
+    }
     .count__number2 {
         width: 48px !important;
         height: 36px !important;
-        margin-top: -30px !important;
-        margin-left: 250px !important;
+        margin-top: -95px !important;
+        margin-left: 300px !important;
         font-family: 'Poppins', sans-serif;
         font-family: 'Poppins', sans-serif;
         font-style: normal;
