--- a/assets/style/ewew.css
+++ b/assets/style/ewew.css
@@ -446,3 +446,378 @@
         margin-left: 10px !important;
     }
 }
+
+.btn .fa {
+    margin-left: 3px;
+}
+
+
+/* .navbar:not(.top-nav-collapse) {
+    background: transparent !important;
+} */
+
+
+/* 
+@media (max-width: 991px) {
+    .navbar:not(.top-nav-collapse) {
+        background: #1C1C1C !important;
+    }
+} */
+
+
+/* .btn-white {
+    color: #1C1C1C!important;
+} */
+
+#header {
+    border: none !important;
+}
+
+h6 {
+    line-height: 1.7;
+}
+
+@media(max-width:575.9px) {
+    .navbar-toggler:not(:disabled):not(.disabled) {
+        margin-left: 250px !important;
+    }
+    body,
+    .container-fruid {
+        width: 100%;
+        height: auto;
+        margin: 0;
+        padding: 0;
+    }
+    .navbar-nav {
+        background-color: #8B8682;
+        height: auto !important;
+    }
+    .collapse {
+        margin-left: -300px !important;
+        margin-top: -100px !important;
+    }
+    .nav-item {
+        margin-top: 10px !important;
+    }
+    #nav-about {
+        margin-left: -325px !important;
+    }
+    .main__section,
+    .main__footer {
+        width: 100%;
+        height: auto;
+        margin: auto;
+        background: #1C1C1C !important;
+    }
+    .navbar {
+        max-width: 30% !important;
+        margin-left: 10px !important;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .fadeIn .col-md-12 {
+        max-width: 70% !important;
+        height: 354px !important;
+        margin-top: 199px !important;
+        margin-left: -50px !important;
+    }
+    .display-3 {
+        width: 50% !important;
+        font-size: 38px !important;
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        text-align: center;
+        justify-content: center;
+        margin: auto !important;
+    }
+    .col-md-12 .display-3 {
+        display: flex;
+        flex-wrap: wrap;
+        text-align: center;
+        line-height: 50px !important;
+        justify-content: center;
+        margin-left: 5px !important;
+    }
+    .subtext-header {
+        width: 50%;
+        height: auto;
+        font-size: 20px !important;
+        margin-top: 10px !important;
+        margin-left: -5px!important;
+        flex-wrap: wrap;
+        text-align: center;
+    }
+    .text__center {
+        width: 50%;
+        height: auto;
+        margin-top: 10px !important;
+        margin-left: 124px !important;
+        display: flex;
+        flex-wrap: wrap;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+    /* ====================SECTION 2================== */
+    .main__section {
+        width: 100%;
+        height: auto;
+    }
+    #container__section2 {
+        width: 100%;
+        height: auto;
+    }
+    #section2__row1 {
+        width: 100%;
+        height: auto;
+        display: block;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+    .about__flex {
+        margin-left: 15px !important;
+        margin-right: 15px;
+    }
+    .text-right__1 {
+        width: 50%;
+        height: auto;
+        margin-right: 0!important;
+        display: flex;
+        margin-top: -10px !important;
+    }
+    .text-right__1 p {
+        font-size: 30px !important;
+        margin-left: 0!important;
+        line-height: 40px;
+        flex-wrap: wrap;
+        margin-top: 10px !important;
+    }
+    #text__right2 {
+        width: 50%;
+        height: auto !important;
+        display: flex;
+        font-size: 20px !important;
+        margin-top: -20px !important;
+        line-height: 40px !important;
+    }
+    .text-right__2 p {
+        width: 58% !important;
+        font-size: 20px !important;
+        margin-top: 10px !important;
+    }
+    .right__front__image {
+        width: 48% !important;
+        margin-top: 15px !important;
+        margin: auto;
+    }
+    .right__behind__image {
+        width: 47% !important;
+        margin-top: 10px;
+    }
+    /* ======== */
+    #section2__row2 {
+        width: 100% !important;
+        height: auto;
+        display: block !important;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+    #text__left1 {
+        margin-top: 460px !important;
+        margin-left: -150px !important;
+        height: auto !important;
+        display: block;
+    }
+    #text__left2 {
+        margin-top: 470px !important;
+    }
+    .text__left__image1 {
+        width: 87% !important;
+        margin-left: 21px!important;
+        margin: auto;
+    }
+    .text__left__image2 {
+        width: 93% !important;
+        margin: auto;
+    }
+    .our__flex {
+        margin-right: 5px !important;
+        margin-top: -30px !important;
+    }
+    .text-left__1 h2 {
+        width: 50%!important;
+        height: auto !important;
+        font-size: 25px !important;
+        line-height: 40px !important;
+        margin-left: 60px;
+        margin-top: -10px !important;
+    }
+    .text-left__2 {
+        width: 50%;
+        height: auto !important;
+        flex-wrap: wrap;
+        margin-top: -25px !important;
+    }
+    .text-left__2 h3 {
+        width: 50%;
+        height: auto !important;
+        margin-left: 60px;
+        flex-wrap: wrap;
+        font-size: 20px;
+    }
+    /* ====================SECTION3=============*/
+    #container__section3 {
+        margin-top: 50px !important;
+        height: auto;
+    }
+    .container__section3__title {
+        max-width: 100%;
+        flex-wrap: wrap;
+        margin-top: 5px !important;
+        height: auto !important;
+        font-size: 20px!important;
+        margin-top: -60px !important;
+    }
+    .container__section3__title p {
+        margin-left: 0px !important;
+        font-size: 30px!important;
+        margin: auto;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+    #section3__row {
+        max-width: 50%;
+        margin-top: 10px !important;
+        height: auto;
+        display: block;
+    }
+    #col-sm-4__col1 {
+        width: 50%;
+        height: auto;
+        margin-left: 21px !important;
+    }
+    #col-sm-4__col2,
+    #col-sm-4__col3 {
+        width: 80%;
+        margin-top: 20px;
+        height: auto !important;
+        margin-left: 20px !important;
+    }
+    #section3_column1_row1,
+    #section3_column2_row1,
+    #section3_column3_row1 {
+        font-size: 25px !important;
+    }
+    #section3_column1_row2,
+    #section3_column2_row2,
+    #section3_column3_row2 {
+        font-size: 18px !important;
+    }
+    .read__more {
+        font-size: 15px !important;
+    }
+    #section3_column1_row3,
+    #section3_column3_row3,
+    #section3_column2_row3 {
+        margin-top: 10px !important;
+    }
+    /* ==========================SECTION4=============== */
+    /* .count__number1 {
+        max-width: 48px !important;
+        height: 36px !important;
+        margin-top: -200px !important;
+        margin-left: 300px !important;
+        font-family: 'Poppins', sans-serif;
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 36px;
+        align-items: center;
+        color: #FFFFFF;
+    }
+    #container__section4 {
+        margin-top: 450px !important;
+    }
+    .container__section4__title {
+        margin-top: 20px;
+        margin-left: 110px !important;
+        font-size: 30px;
+    }
+    #swiper1__slide1__section4 {
+        margin-left: 15px !important;
+        margin-right: 50px !important;
+        width: 100% !important;
+        margin-top: -65px !important;
+    }
+    .swiper-slide__icon__design1 {
+        margin-left: 45px;
+        margin-right: 15px;
+    }
+    .swiper-slide__library1 {
+        margin-left: 40px;
+        margin-right: 15px;
+    }
+    .swiper__slide__image {
+        width: 300 !important
+    }
+    .swiper-container-horizontal>.swiper-pagination-bullets,
+    .swiper-pagination-custom,
+    .swiper-pagination-fraction {
+        bottom: 15px !important;
+    } */
+    /* ======================SECTION5================ */
+    #container__section5 {
+        margin-top: -50px !important;
+    }
+    .container__section5__title {
+        margin-top: 60px !important;
+        margin-left: 110px !important;
+        font-size: 30px;
+    }
+    #swiper1__slide1__section5 {
+        margin-top: -50px !important;
+    }
+    .swiper-slide__image1 img {
+        width: 335px !important;
+        margin-left: 20px !important;
+        margin-right: 15px !important;
+    }
+    .count__number2 {
+        width: 48px !important;
+        height: 36px !important;
+        margin-top: -95px !important;
+        margin-left: 300px !important;
+        font-family: 'Poppins', sans-serif;
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 36px;
+        align-items: center;
+        color: #FFFFFF;
+    }
+    /* ==================CONTAINER FOOTER============== */
+    #container__footer {
+        width: 100%;
+        height: auto !important;
+        margin-top: 100px !important;
+    }
+    .footer__row {
+        width: 100% !important;
+        height: auto !important;
+        margin-top: 10px !important;
+        display: block;
+        flex-wrap: wrap;
+    }
+    .foptimal {
+        margin-left: 100px !important;
+    }
+    .footer__row .icon__boulevard .place {
+        margin-left: -35px !important;
+    }
+}
