--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -4,18 +4,26 @@
     margin-left: 3px;
 }
 
-.navbar:not(.top-nav-collapse) {
-    background: transparent !important;
-}
 
+/* .navbar:not(.top-nav-collapse) {
+    background: transparent !important;
+} */
+
+
+/* 
 @media (max-width: 991px) {
     .navbar:not(.top-nav-collapse) {
         background: #1C1C1C !important;
     }
-}
+} */
 
-.btn-white {
+
+/* .btn-white {
     color: #1C1C1C!important;
+} */
+
+#header {
+    border: none !important;
 }
 
 h6 {
@@ -23,6 +31,9 @@ h6 {
 }
 
 @media(max-width:575.9px) {
+    .navbar-toggler:not(:disabled):not(.disabled) {
+        margin-left: 250px !important;
+    }
     body,
     .container-fruid {
         width: 100%;
@@ -134,7 +145,7 @@ h6 {
         margin-left: 0!important;
         line-height: 40px;
         flex-wrap: wrap;
-        margin-top: 20px !important;
+        margin-top: 10px !important;
     }
     #text__right2 {
         width: 50%;
